--- a/nsc_robot_control/config/nsc_robot_with_prob_control.yaml
+++ b/nsc_robot_control/config/nsc_robot_with_prob_control.yaml
@@ -29,3 +29,11 @@ nsc_robot:
     type: effort_controllers/JointPositionController
     joint: lio_joint6
     pid: { p: 100.0, i: 0.01, d: 10.0 }
+  wheel_front_right_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: base_to_wheel_front_right
+    pid: { p: 100.0, i: 0.01, d: 10.0 }
+  wheel_front_left_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: base_to_wheel_front_left
+    pid: { p: 100.0, i: 0.01, d: 10.0 }
